@@ -18,6 +18,14 @@
    <caption>The main window showing the application in action</caption>
   </screenshot>
  </screenshots>
+ <keywords>
+  <keyword>MIDI</keyword>
+  <keyword>Multicast</keyword>
+  <keyword>Network</keyword>
+  <keyword>UDP</keyword>
+  <keyword>IP</keyword>
+  <keyword>Qt</keyword>
+ </keywords>
  <url type="homepage">http://qmidictl.sourceforge.net</url>
  <updatecontact>rncbc@rncbc.org</updatecontact>
  <project_group>rncbc.org</project_group>
