@@ -1,7 +1,7 @@
 // qmidictlAbout.h
 //
 /****************************************************************************
-   Copyright (C) 2010-2015, rncbc aka Rui Nuno Capela. All rights reserved.
+   Copyright (C) 2010-2016, rncbc aka Rui Nuno Capela. All rights reserved.
 
    This program is free software; you can redistribute it and/or
    modify it under the terms of the GNU General Public License
@@ -28,12 +28,12 @@
 #define QMIDICTL_VERSION      PACKAGE_VERSION
 #else
 #define QMIDICTL_TITLE        "QmidiCtl"
-#define QMIDICTL_VERSION      "0.1.1"
+#define QMIDICTL_VERSION      "0.3.0"
 #endif
 
 #define QMIDICTL_SUBTITLE     "A MIDI Remote Controller via UDP/IP Multicast"
 #define QMIDICTL_WEBSITE      "http://qmidictl.sourceforge.net"
-#define QMIDICTL_COPYRIGHT    "Copyright (C) 2010-2015, rncbc aka Rui Nuno Capela. All rights reserved."
+#define QMIDICTL_COPYRIGHT    "Copyright (C) 2010-2016, rncbc aka Rui Nuno Capela. All rights reserved."
 
 #define QMIDICTL_DOMAIN       "rncbc.org"
 
